--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,12 +1,13 @@
 .container {
   width: 100%;
   height: 22vh;
-  background-color: #415ba3;
+  background-color: #330066;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-p {
+.headerText {
   font-size: 30px;
   font-weight: 500;
+  color: #ffd11a;
 }
