--- a/src/UserComponent/UserComponent.module.css
+++ b/src/UserComponent/UserComponent.module.css
@@ -1,3 +1,4 @@
+/*User bar*/
 .container {
   width: 100%;
   height: 150px;
@@ -17,7 +18,7 @@
   background-color: #281861;
   margin: 20px;
   transition: all 0.3s ease;
-  box-shadow: 10px 10px 10px #282831;
+  box-shadow: 10px 10px 10px #941414;
   display: flex;
   cursor: pointer;
 }
@@ -31,6 +32,8 @@
   margin-left: 15px;
   margin-top: 8px;
 }
+
+/*User info*/
 .containerInfo {
   margin-left: 100px;
   width: 50%;
@@ -48,7 +51,16 @@
 }
 .userInfoName p {
   font-size: 30px;
+  font-weight: 500;
   text-transform: uppercase;
+  transition: all 0.3s ease;
+}
+.userInfoNameActivated p {
+  font-size: 30px;
+  font-weight: 500;
+  color: gold;
+  text-transform: uppercase;
+  border-bottom: solid 1px gold;
 }
 .userInfoId {
   box-sizing: border-box;
@@ -57,5 +69,13 @@
   align-items: center;
 }
 .userInfoId p {
+  font-size: 18px;
+  font-weight: 500;
+  transition: all 0.3s ease;
+}
+.userInfoIdActivated p {
+  font-weight: 500;
+  font-size: 18px;
+  color: gold;
   font-size: 18px;
 }
