--- a/src/UserComponent/UserComponent.module.css
+++ b/src/UserComponent/UserComponent.module.css
@@ -29,13 +29,15 @@
 
 .containerElementIndex {
   position: absolute;
+  font-size: 25px;
+  font-weight: 500;
   margin-left: 15px;
   margin-top: 8px;
 }
 
 /*User info*/
 .containerInfo {
-  margin-left: 100px;
+  margin-left: 20%;
   width: 50%;
   height: 100%;
   display: flex;
@@ -63,7 +65,6 @@
   border-bottom: solid 1px gold;
 }
 .userInfoId {
-  box-sizing: border-box;
   height: 30%;
   display: flex;
   align-items: center;
@@ -77,5 +78,18 @@
   font-weight: 500;
   font-size: 18px;
   color: gold;
-  font-size: 18px;
+}
+
+@media screen and (max-width: 700px) {
+  .container,
+  .activatedUser {
+    height: 70px;
+  }
+
+  .userInfoName p,
+  .userInfoNameActivated p,
+  .userInfoId p,
+  .userInfoIdActivated p {
+    font-size: 15px;
+  }
 }
